# awesome-stuff

./: README.md
own/dockercpp/: README.md
own/dockercpp/01-app/: Dockerfile  main.cpp
own/dockercpp/02-bundled-app/: Dockerfile
own/dockercpp/03-bundled-app-with-dependencies/: Dockerfile  main.cpp
own/dockercpp/04-alpine/: Dockerfile
own/the-meson-build-system/: .clang-format  .clang-tidy  .gitignore  README.md
own/the-meson-build-system/examples/01-hello-world/: meson.build
own/the-meson-build-system/examples/02-hello-world-with-subfolders/: meson.build
own/the-meson-build-system/examples/02-hello-world-with-subfolders/include/: hello.hpp
own/the-meson-build-system/examples/02-hello-world-with-subfolders/src/: hello.cpp  main.cpp  meson.build
own/the-meson-build-system/examples/03-tooling/: meson.build
own/the-meson-build-system/examples/03-tooling/include/: config.hpp  meson.build  tooling.hpp
own/the-meson-build-system/examples/03-tooling/internal/: config.impl.hpp.in  meson.build
own/the-meson-build-system/examples/03-tooling/meson/: dist.py  install.py  postconf.py
own/the-meson-build-system/examples/03-tooling/src/: main.cpp  meson.build  tooling.cpp
own/the-meson-build-system/examples/03-tooling/test/: meson.build  tooling.cpp
